syntax = "proto3";

message TransactionBuilder {

	string signatureFragments = 1;
    string extraDataDigest = 2;
    string address = 3;
	bytes value = 4;
	int64 issuanceTimestamp = 5;
	int64 timelockLowerBound = 6;
	int64 timelockUpperBound = 7;
    string bundleNonce = 8;
    string trunkHash = 9;
	string branchHash = 10;
    string tag = 11;
	int64 attachmentTimestamp = 12;
	int64 attachmentTimestampLowerBound = 13;
	int64 attachmentTimestampUpperBound = 14;
    string nonce = 15;
    string decodedSignatureFragments = 16;
    string essence = 17;
	bool isBundleHead = 18;
	bool isBundleTail = 19;
	
}

message Transaction {

	string signatureFragments = 1;
    string extraDataDigest = 2;
    string address = 3;
	bytes value = 4;
	int64 issuanceTimestamp = 5;
	int64 timelockLowerBound = 6;
	int64 timelockUpperBound = 7;
    string bundleNonce = 8;
    string trunkHash = 9;
	string branchHash = 10;
    string tag = 11;
	int64 attachmentTimestamp = 12;
	int64 attachmentTimestampLowerBound = 13;
	int64 attachmentTimestampUpperBound = 14;
    string nonce = 15;
    string decodedSignatureFragments = 16;
    string essence = 17;
	bool isBundleHead = 18;
	bool isBundleTail = 19;
	
	string hash = 20;
	
}


